[package]
authors = ["Adam Mills"]
name = "CY8C95XX_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# esentials
cortex-m-rt = "0.7.1"
cortex-m = "0.7.6"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.0"

# hal
rp2040-hal = { version = "0.6", features = ["rt"] }
embedded-hal = "0.2.7"
# required for clocks and delays
embedded-time = "0.12.1"
nb = "1.0.0"
fugit = "0.3.6"


# Cy8c95xx_driver = { path = "./" }